# ModulerMadness

./: CMakeLists.txt  README.md
include/: BaseOperation.h  DelayOperation.h  EchoOperation.h  Module.h  ModuleNetwork.h  NoopOperation.h  ReverseOperation.h
scripts/: clean.sh
src/: CMakeLists.txt  DelayOperation.cpp  EchoOperation.cpp  Module.cpp  ModuleNetwork.cpp  NoopOperation.cpp  ReverseOperation.cpp  main.cpp
test/: CMakeLists.txt  testSuit.cpp
